# Master

./: .gitignore
2015_WS/Infinite_Computations/exercises/06/: exercise.tex
2015_WS/Infinite_Computations/exercises/07/: exercise.tex
2015_WS/Infinite_Computations/exercises/08/: exercise.tex
2015_WS/Infinite_Computations/exercises/09/: exercise.tex
2015_WS/Operations_Research/: casual_gams_file.tex
2015_WS/Operations_Research/exercises/01/: transport.lst
2015_WS/Operations_Research/exercises/02/: CapacitatedKnapsack.gms  CapacitatedKnapsack.lst  ckp-data1.gms  kaffeeErrors.gms  kaffeeErrors.lst
2015_WS/Operations_Research/exercises/03/: assignment-data1.gms  assignment.gms  exercise.tex
2015_WS/Operations_Research/exercises/04/: binpacking-data1.gms
2015_WS/Operations_Research/exercises/05/: exercise.tex  oil.gms  oilData1.gms  oilData2.gms  oilData3.gms
2015_WS/Operations_Research/exercises/06/: exercise.tex  scheduling-data3.gms  scheduling.gms
2015_WS/Operations_Research/exercises/07/: scheduling-altvars.gms  scheduling-data1.gms  scheduling-data2.gms  scheduling-data4.gms
2015_WS/Operations_Research/exercises/09/: roflcopter.gms  santa-data1.gms  santa-data2.gms  santa-data3.gms  santa-data4.gms  santa-data5.gms  santa.gms  santa1.gms  santa1.txt
2015_WS/Virtual_Reality/exercises/03/: exercise.tex
2015_WS/Virtual_Reality/exercises/05/: exercise.tex
2015_WS/Virtual_Reality/exercises/06/: exercise.tex
2016_SS/Algorithmic_Game_Theory/: exercise.tex  prog.cpp
2016_SS/Algorithmic_Game_Theory/exercises/06/: ex.tex
2016_SS/Komplexitätstheorie/exercise/03/: exercise.tex
2016_SS/Komplexitätstheorie/exercise/05/: exercise.tex
2016_SS/Komplexitätstheorie/exercise/07/: exercise.bbl  exercise.blg  exercise.tex  fast.sh  sources.bib
2016_SS/Komplexitätstheorie/exercise/08/: exercise.tex
2016_SS/Komplexitätstheorie/exercise/09/: exercise.tex
2016_SS/Komplexitätstheorie/exercise/11/: ex.tex
2016_WS/Artifical Intellegence/latex notes/: notes.tex
2016_WS/Artifical_Intellegence/latex_notes/: notes.tex
2016_WS/Artifical_Intellegence/latex_notes/02_Agent_Architecture/: Agent_Architecture.tex
2016_WS/Artifical_Intellegence/latex_notes/03_Search_annotated/: notes.tex
2016_WS/Heigh Performance Computing/lecture_notes/: notes.tex
2016_WS/High Performance Computing/lecture_notes/: make.bat  notes.tex
2016_WS/High Performance Computing/lecture_notes/02_Modern_Architectures/: 02_Modern_Architecturecs.tex
2016_WS/High_Performance_Computing/lecture_notes/: notes.tex
2016_WS/High_Performance_Computing/lecture_notes/02_Modern_Architectures/: 02_Modern_Architecturecs.tex
2016_WS/High_Performance_Computing/lecture_notes/03_Serial_Optimization/: 03_Serial_Optimization.tex
2016_WS/Parallel_Programming/homework/HW-OpenMP-code/: HW-OpenMP-2.4-jobscript  HW-OpenMP-2.4.c  HW-OpenMP-2.5.c  HW-OpenMP-2.8-jobscript  HW-OpenMP-2.8-script  HW-OpenMP-2.8.c  HW-OpenMP-2.9.c
2016_WS/Parallel_Programming/homework/HW-OpenMP-code-solutions/: HW-OpenMP2-Fibonacci-sections.c  HW-OpenMP2-Heat-sample-output-1.txt  HW-OpenMP2-Heat-sample-output-2.txt  HW-OpenMP2-Heat.c  HW-OpenMP2-Mandelbrot-v2.c  HW-OpenMP2-Mandelbrot.c  HW-OpenMP2-Montecarlo-Pi.c  HW-OpenMP2-default-schedule.c  HW-OpenMP2-udr.c  HW-OpenMP2-workloads.output.txt  HW-OpenMP2-workloads.txt
2016_WS/Parallel_Programming/lecture_code/03_Metrics/: test.x  time0.c  time1.c  time2.c  time3.c  time4.c
2016_WS/Parallel_Programming/lecture_code/05_OpenMP_1/: 01.hello_world.c  01.hello_world.x  01b.hello_world-omp.c  01b.hello_world-omp.x  01c.hello_world-omp-v2.c  01d.hello_world-omp-v3.c  01e.hello_world-omp-v4.c  02.axpy.c  02.axpy.x  02b.axpy-omp.c  02c.axpy-omp-v2.c  03.pi.c  03.pi.x  03b.pi-omp.c  03c.pi-omp-manual-red.c  03d.pi-omp-red.c  04.parallel-data-sharing.c  04.parallel-if.c  04.parallel-reduction.c  05a.reduction-max-sequential.c  05b.reduction-max-userdefined.c  06a.private-struct.c  06b.private-array.c  06c.private-pointer.c  Makefile  README  name.sh
2016_WS/Parallel_Programming/lecture_code/06.OMP2-code/: .08a.histogram.c.swp  03c.pi-omp-manual-red-atomic.c  03c.pi-omp-manual-red-critical.c  07.incr-ok.c  07.incr-race.c  08a.histogram.c  08b.histogram-critical.c  08c.histogram-atomic.c  09.barrier.c  09b.barrier-error.c  09c.barrier-error2.c  10a.critical-names.c  10b.atomic-critical.c  Makefile  PI-timings.txt
2016_WS/Parallel_Programming/lecture_code/07.OMP3-code/: 02.axpy.c  02d.axpy-omp-for.c  (+16 more)
Projects/rfid_reader_writer/GUI/: CMakeLists.txt  GUI.pro  cardinformationwindow.cpp  cardinformationwindow.h  doxygenConfigfile  eventhandler.cpp  eventhandler.h  exampJobFile.json  logfile.json  main.cpp  mainwindow.cpp  mainwindow.h
Projects/rfid_reader_writer/GUI/RFID_Reader_Writer/: RFID_Reader_Writer.pro  mainwindow.ui.autosave
Projects/rfid_reader_writer/GUI/build-RFID_Reader_Writer-Desktop_Qt_5_7_1_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Projects/rfid_reader_writer/GUI/build-RFID_Reader_Writer-Desktop_Qt_5_7_1_clang_64bit-Debug/RFID_Reader_Writer.app/Contents/: Info.plist
Projects/rfid_reader_writer/GUI/build-RFID_Reader_Writer-Desktop_Qt_5_7_1_clang_64bit-Debug/RFID_Reader_Writer.app/Contents/MacOS/: RFID_Reader_Writer
Projects/rfid_reader_writer/GUI/sketches/: main_window.tex
Projects/rfid_reader_writer/GUI/src/: Calculator.cpp  Calculator.hpp  CardInformation.hpp  GeneralDefines.h  JobFile.cpp  JobFile.h  LogFile.cpp  LogFile.h  eventhandler.cpp  eventhandler.h  md5.c  md5.h
Projects/rfid_reader_writer/GUI/src/Tester/: TestCalculator.cpp  TestCalculator.h  TestCards.h  TestEventhandler.cpp  TestEventhandler.h  TestJobFile.cpp  TestLogFile.cpp
Projects/rfid_reader_writer/GUI/testBin/: CalculatorTest  EventHandlerTest  JobFileTest  LogfileTest  createdJobFile.json  jobReadTest.json  logfile.json  logfileTestDate.json  logfileTestJobNr.json  logfileTestKunde.json  logfileTestTime.json
Projects/rfid_reader_writer/build-GUI-Desktop_Qt_5_7_1_clang_64bit-Debug/: Makefile
thesis/: example.tex  random_lemma.tex
thesis/notes/: notes.tex
(+58 files in other folders)
